# snowflake-rs

jwt/: Cargo.toml
snowflake-api/: Cargo.toml
snowflake-api/examples/tracing/: Cargo.toml
snowflake-api/examples/tracing/src/: main.rs
snowflake-api/src/: lib.rs  polars.rs  session.rs
